[gd_scene load_steps=4 format=3 uid="uid://bg6kthv7k7egy"]

[ext_resource type="Script" uid="uid://dwirww2e32fhl" path="res://scripts/level_select_handler.gd" id="1_l0h45"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gugsm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_gugsm"]
Label/colors/font_color = Color(0, 0.23921569, 0.64705884, 1)
Label/colors/font_outline_color = Color(1, 0.84313726, 0, 1)
Label/constants/outline_size = 7
Label/font_sizes/font_size = 90

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l0h45")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gugsm")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 70

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LevelSelect" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
theme = SubResource("Theme_gugsm")
text = "LEVEL SELECT"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_bottom = 155

[node name="PreviousChapter" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
disabled = true
text = "<"

[node name="NextChapter" type="Button" parent="PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(40, 60)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
text = ">"

[connection signal="pressed" from="PanelContainer/MarginContainer/PreviousChapter" to="." method="_on_previous_chapter_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/NextChapter" to="." method="_on_next_chapter_pressed"]
